adds test command

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
                 "Njenga55\\ServiceProvider\\MobileServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "test": [
+            "./vendor/bin/phpunit tests/Feature"
+        ]
     }
 }
